# weather-forecast-cli

./: Cargo.toml  LICENSE  README.md
src/: main.rs
