[package]
name = "weather-app"
version = "0.1.0"
authors = ["Thomas Deconinck <thomas.deconinck@colisweb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pico-args = "0.3.4"